# ftx

./: CMakeLists.txt  config.json
include/: FTXAPI.h
src/: FTXAPI.cpp  main.cpp
